# project-groenwerf

./: .gitignore  README.md
docs/research/: SensorConnectionAnalysis.md  SensorInstallationAnalysis.md  SensorProtectionAnalysis.md  SensorSuitabilityAnalysis.md  SensorTestingAnalysis.md  sensorProtectionAnalysis.md
firmware/: CMakeLists.txt  README.md  pico_sdk_import.cmake
firmware/include/: networkmanager.h
firmware/include/processing/: median_filter.h  moving_average.h  sensor_processor.h  vibration_processor.h
firmware/include/sensors/: adxl345.h  rcwl1604.h  vl53l1x.h
firmware/src/: main.cpp  networkmanager.cpp  wifi.cpp
firmware/src/processing/: median_filter.cpp  moving_average.cpp  sensor_processor.cpp  vibration_processor.cpp
firmware/src/sensors/: adxl345.cpp  rcwl1604.cpp  vl53l1x.cpp
server/: app.py
test/: .gitignore  CMakeLists.txt  README.md  adxl345.cpp  adxl345.h  main.cpp  vl53l1x.cpp  vl53l1x.h  vl53l1x.hpp
